Fix font sizing issues
Summary:
In LaTeX, large delimiters are the same font size as they are at a normal size,
regardless of the actual size. This means that we need to scale up the font size
in the inner nodes, which is annoying because we run into the same problem we
had with \Huge, etc in those nodes. Thus, this fixes both problems at once.

The problem was that when we used our baseline-align-hack and then increased the
font size inside of one of the middle (display: block and height: 0) nodes, the
node with the increased font size would shift downards (misaligning its
baseline). To fix this, we add a method for calculating the maximum font size
used in each of the nodes, and adding a small node with this font size to each
of the other nodes (including the fix-ie node). This shifts all of the nodes
down the same amount, and gets their baselines aligned.

Test Plan:
 - Do dumb things by putting \Huge and \big in places they shouldn't be, and
   make sure they behave responsibly
 - Do the same thing in IE 8, 9, 10, 11, Safari, Firefox, and make sure they all
   behave the same (to some approximation)
 - Make sure the new huxley image looks good, and the images that changed don't
   have significant changes

Reviewers: alpert

Reviewed By: alpert

Differential Revision: http://phabricator.khanacademy.org/D12684

--- a/static/katex.less
+++ b/static/katex.less
@@ -34,6 +34,11 @@ big parens
         font-family: KaTeX_AMS;
     }
 
+    .fix-ie {
+        display: inline-table;
+        table-layout: fixed;
+    }
+
     @thinspace: 0.16667em;
     @mediumspace: 0.22222em;
     @thickspace: 0.27778em;
@@ -188,10 +193,6 @@ big parens
                 .baseline-align-hack-inner;
             }
         }
-
-        .fix-ie {
-            display: inline-block;
-        }
     }
 
     .mfrac {
@@ -210,11 +211,7 @@ big parens
             }
         }
 
-        .fix-ie {
-            display: inline-block;
-        }
-
-        .mfracmid > span {
+        .mfracmid > .line {
             width: 100%;
 
             &:before {
@@ -323,11 +320,7 @@ big parens
             }
         }
 
-        > .fix-ie {
-            display: inline-block;
-        }
-
-        > .overline-line > span {
+        > .overline-line > .line {
             width: 100%;
 
             &:before {
@@ -347,7 +340,7 @@ big parens
         }
     }
 
-    .sizing {
+    .sizing, .fontsize-ensurer {
         display: inline-block;
 
         @size1: 0.5;
